<resources>
    <string name="app_name">FilmListApp2</string>
    <string name="AppLogo">Домашняя Фильмотека</string>
    <string name="signInLogo">Авторизация</string>
    <string name="allFilms">Все фильмы</string>
    <string name="deleteFilm">Удалить фильм</string>
    <string name="exit">Выйти</string>
    <string name="userFieldLogo">Моя фильмотека</string>
    <string name="registration">Регистрация</string>
    <string name="registrationLogin">Логин</string>
    <string name="registrationPass">Пароль</string>
    <string name="registrationPassRep">Повторите пароль</string>
    <string name="signUp">Зарегистрироваться</string>
    <string name="registrationBack">Назад</string>
    <string name="godFieldLogo">Добро пожаловать, товарищ Админ!</string>
    <string name="adminLogo">Добро пожаловать, товарищ Админ</string>
    <string name="usersList">Пользователи</string>
    <string name="adminBack">Назад</string>
    <string name="deleteUser">Удалить пользователя</string>
    <string name="deleteFilmByName">Удалить фильм по названию</string>
    <string name="FilmNameToDelete">Название фильма</string>
    <string name="delete">Удалить</string>
    <string name="LoginToDelete">Логин пользователя</string>
    <string name="deleteUserByLogin">Удалить пользователя по логину</string>
    <string name="ConfirmAdminPassword">Пароль администратора</string>
    <string name="allFilm">Добавить фильм</string>
    <string name="addFilm">Добавить фильм</string>
    <string name="setImage">Загрузить картинку</string>
    <string name="addFilmErrorLogo">Фильм с таким названием уже есть в библиотеке</string>
</resources>