<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AdminField"
    android:gravity="center"
    android:background="@color/background">

    <TextView
        android:id="@+id/AdminField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adminLogo"
        android:textSize="23dp"
        android:textColor="@color/parchment"/>

    <Button
        android:id="@+id/UsersList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usersList"
        android:layout_margin="40dp"
        android:textColor="@color/parchment"
        android:backgroundTint="@color/chestnutTree"
        />

    <Button
        android:id="@+id/AdminBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adminBack"
        android:textColor="@color/parchment"
        android:backgroundTint="@color/chestnutTree"
        />


</LinearLayout>