<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddFilm"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/background">

    <TextView
        android:id="@+id/AddFilmLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addFilm"
        android:textColor="@color/parchment"
        android:textSize="30dp"
        android:layout_margin="50dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:id="@+id/AddFilmName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Название фильма"
            android:textColorHint="@color/parchment"
            android:layout_margin="30dp"/>

        <EditText
            android:id="@+id/AddFilmDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Описание фильма"
            android:textColorHint="@color/parchment"
            android:layout_margin="30dp"/>

        <Button
            android:id="@+id/AddFilm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addFilm"
            android:textColor="@color/parchment"
            android:layout_margin="20dp"
            android:backgroundTint="@color/chestnutTree"
            />

        <Button
            android:id="@+id/AddFilmPoster"
            android:layout_margin="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setImage"
            android:textColor="@color/parchment"
            android:backgroundTint="@color/chestnutTree"
            />

        <Button
            android:id="@+id/AddFilmBack"
            android:layout_margin="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adminBack"
            android:textColor="@color/parchment"
            android:backgroundTint="@color/chestnutTree"
            />

    </LinearLayout>

</LinearLayout>